--- a/data/raw/00_data_simulation.ipynb
+++ b/data/raw/00_data_simulation.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -180,123 +180,123 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>898f0215-320d-45d1-a103-d45c8e1baf96</td>\n",
-       "      <td>1.416714</td>\n",
-       "      <td>2023-04-29</td>\n",
-       "      <td>562.301796</td>\n",
-       "      <td>16:25:56</td>\n",
-       "      <td>456.070392</td>\n",
-       "      <td>1041.427961</td>\n",
-       "      <td>Snow</td>\n",
-       "      <td>Light</td>\n",
-       "      <td>1.117360</td>\n",
+       "      <td>89273afc-bd2f-41ed-a73d-ef0b92913719</td>\n",
+       "      <td>6.834667</td>\n",
+       "      <td>2023-06-19</td>\n",
+       "      <td>860.972014</td>\n",
+       "      <td>10:21:08</td>\n",
+       "      <td>2600.678278</td>\n",
+       "      <td>1347.343378</td>\n",
+       "      <td>Light Rain</td>\n",
+       "      <td>Severe</td>\n",
+       "      <td>2.990486</td>\n",
        "      <td>...</td>\n",
        "      <td>3.5</td>\n",
-       "      <td>262.480844</td>\n",
-       "      <td>72.364442</td>\n",
-       "      <td>255.930919</td>\n",
+       "      <td>1697.019217</td>\n",
+       "      <td>96.922976</td>\n",
+       "      <td>660.421071</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>53.993055</td>\n",
-       "      <td>1.403801</td>\n",
-       "      <td>978.550735</td>\n",
-       "      <td>1.232928</td>\n",
-       "      <td>0.013642</td>\n",
+       "      <td>75.199379</td>\n",
+       "      <td>0.219246</td>\n",
+       "      <td>1729.539837</td>\n",
+       "      <td>0.331057</td>\n",
+       "      <td>0.040278</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>3234c09c-0c50-4e9c-a290-9e5473ba6829</td>\n",
-       "      <td>5.380569</td>\n",
-       "      <td>2023-07-02</td>\n",
-       "      <td>431.217677</td>\n",
-       "      <td>06:39:07</td>\n",
-       "      <td>2685.688247</td>\n",
-       "      <td>2582.308510</td>\n",
+       "      <td>78800389-d0f5-41e7-9ab3-4401f6c25c32</td>\n",
+       "      <td>5.090882</td>\n",
+       "      <td>2023-02-24</td>\n",
+       "      <td>847.397208</td>\n",
+       "      <td>06:44:56</td>\n",
+       "      <td>1493.396998</td>\n",
+       "      <td>1610.912518</td>\n",
        "      <td>Clear</td>\n",
        "      <td>Moderate</td>\n",
-       "      <td>4.218477</td>\n",
+       "      <td>1.243085</td>\n",
        "      <td>...</td>\n",
        "      <td>3.5</td>\n",
-       "      <td>1545.686213</td>\n",
-       "      <td>73.966035</td>\n",
-       "      <td>489.944131</td>\n",
+       "      <td>974.485550</td>\n",
+       "      <td>33.181200</td>\n",
+       "      <td>0.000000</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>41.406163</td>\n",
-       "      <td>2.873531</td>\n",
-       "      <td>1093.982877</td>\n",
-       "      <td>0.160561</td>\n",
-       "      <td>0.026941</td>\n",
+       "      <td>74.013722</td>\n",
+       "      <td>1.420456</td>\n",
+       "      <td>1000.309343</td>\n",
+       "      <td>0.567429</td>\n",
+       "      <td>0.041070</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>b87bb146-851c-4b73-a43c-fc996abb7785</td>\n",
-       "      <td>7.303720</td>\n",
-       "      <td>2023-12-27</td>\n",
-       "      <td>643.718983</td>\n",
-       "      <td>17:46:39</td>\n",
-       "      <td>1794.148948</td>\n",
-       "      <td>136.051087</td>\n",
+       "      <td>cc5a94e9-d53b-4d84-ba13-19d045c00e21</td>\n",
+       "      <td>5.179179</td>\n",
+       "      <td>2023-02-12</td>\n",
+       "      <td>368.294777</td>\n",
+       "      <td>16:45:48</td>\n",
+       "      <td>495.929796</td>\n",
+       "      <td>585.832494</td>\n",
        "      <td>Clear</td>\n",
        "      <td>Severe</td>\n",
-       "      <td>4.570242</td>\n",
+       "      <td>1.334854</td>\n",
        "      <td>...</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>885.069632</td>\n",
-       "      <td>54.339958</td>\n",
-       "      <td>894.769893</td>\n",
+       "      <td>3.5</td>\n",
+       "      <td>323.608806</td>\n",
+       "      <td>56.347931</td>\n",
+       "      <td>0.000000</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>61.810854</td>\n",
-       "      <td>0.197848</td>\n",
-       "      <td>1727.563238</td>\n",
-       "      <td>0.358788</td>\n",
-       "      <td>0.062342</td>\n",
+       "      <td>32.167757</td>\n",
+       "      <td>2.569551</td>\n",
+       "      <td>463.841459</td>\n",
+       "      <td>0.742635</td>\n",
+       "      <td>0.013087</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>bd786c33-d095-4f72-a469-48db26a1ba6f</td>\n",
-       "      <td>2.040280</td>\n",
-       "      <td>2023-11-14</td>\n",
-       "      <td>956.585582</td>\n",
-       "      <td>18:38:29</td>\n",
-       "      <td>2532.664483</td>\n",
-       "      <td>2368.078612</td>\n",
-       "      <td>Light Rain</td>\n",
-       "      <td>Heavy</td>\n",
-       "      <td>2.921457</td>\n",
+       "      <td>36b33d73-1c8e-4782-9775-84def74b3cd0</td>\n",
+       "      <td>3.271822</td>\n",
+       "      <td>2023-09-23</td>\n",
+       "      <td>740.660213</td>\n",
+       "      <td>01:47:40</td>\n",
+       "      <td>2518.656016</td>\n",
+       "      <td>2720.531979</td>\n",
+       "      <td>Heavy Rain</td>\n",
+       "      <td>Moderate</td>\n",
+       "      <td>4.355089</td>\n",
        "      <td>...</td>\n",
        "      <td>3.5</td>\n",
-       "      <td>1457.616899</td>\n",
-       "      <td>84.180146</td>\n",
-       "      <td>382.070630</td>\n",
+       "      <td>1643.497273</td>\n",
+       "      <td>87.362167</td>\n",
+       "      <td>0.000000</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>91.852771</td>\n",
-       "      <td>2.000698</td>\n",
-       "      <td>1533.243676</td>\n",
-       "      <td>0.377699</td>\n",
-       "      <td>0.023692</td>\n",
+       "      <td>64.691055</td>\n",
+       "      <td>1.144174</td>\n",
+       "      <td>960.391265</td>\n",
+       "      <td>0.294070</td>\n",
+       "      <td>0.054048</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>f5d0d59d-4427-4e65-bde2-49eda9705097</td>\n",
-       "      <td>4.029305</td>\n",
-       "      <td>2023-09-18</td>\n",
-       "      <td>890.402920</td>\n",
-       "      <td>23:33:04</td>\n",
-       "      <td>701.540781</td>\n",
-       "      <td>446.419773</td>\n",
-       "      <td>Fog</td>\n",
-       "      <td>Light</td>\n",
-       "      <td>4.143275</td>\n",
+       "      <td>1139533f-4a9f-4348-b05c-10a55d768e04</td>\n",
+       "      <td>7.007333</td>\n",
+       "      <td>2023-06-20</td>\n",
+       "      <td>323.146483</td>\n",
+       "      <td>13:03:09</td>\n",
+       "      <td>2466.773297</td>\n",
+       "      <td>1489.795422</td>\n",
+       "      <td>Clear</td>\n",
+       "      <td>Severe</td>\n",
+       "      <td>2.618140</td>\n",
        "      <td>...</td>\n",
-       "      <td>3.5</td>\n",
-       "      <td>403.755691</td>\n",
-       "      <td>30.179425</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>1379.693375</td>\n",
+       "      <td>26.073320</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>85.497813</td>\n",
-       "      <td>0.396772</td>\n",
-       "      <td>1042.604804</td>\n",
-       "      <td>1.269210</td>\n",
-       "      <td>0.059429</td>\n",
+       "      <td>28.224396</td>\n",
+       "      <td>0.813373</td>\n",
+       "      <td>442.445597</td>\n",
+       "      <td>0.131000</td>\n",
+       "      <td>0.036246</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -305,58 +305,58 @@
       ],
       "text/plain": [
        "                               Route ID  Delivery Time (hours)        Date  \\\n",
-       "0  898f0215-320d-45d1-a103-d45c8e1baf96               1.416714  2023-04-29   \n",
-       "1  3234c09c-0c50-4e9c-a290-9e5473ba6829               5.380569  2023-07-02   \n",
-       "2  b87bb146-851c-4b73-a43c-fc996abb7785               7.303720  2023-12-27   \n",
-       "3  bd786c33-d095-4f72-a469-48db26a1ba6f               2.040280  2023-11-14   \n",
-       "4  f5d0d59d-4427-4e65-bde2-49eda9705097               4.029305  2023-09-18   \n",
+       "0  89273afc-bd2f-41ed-a73d-ef0b92913719               6.834667  2023-06-19   \n",
+       "1  78800389-d0f5-41e7-9ab3-4401f6c25c32               5.090882  2023-02-24   \n",
+       "2  cc5a94e9-d53b-4d84-ba13-19d045c00e21               5.179179  2023-02-12   \n",
+       "3  36b33d73-1c8e-4782-9775-84def74b3cd0               3.271822  2023-09-23   \n",
+       "4  1139533f-4a9f-4348-b05c-10a55d768e04               7.007333  2023-06-20   \n",
        "\n",
        "   Fuel Costs (USD) Delivery Start Time  Distance Traveled (miles)  \\\n",
-       "0        562.301796            16:25:56                 456.070392   \n",
-       "1        431.217677            06:39:07                2685.688247   \n",
-       "2        643.718983            17:46:39                1794.148948   \n",
-       "3        956.585582            18:38:29                2532.664483   \n",
-       "4        890.402920            23:33:04                 701.540781   \n",
+       "0        860.972014            10:21:08                2600.678278   \n",
+       "1        847.397208            06:44:56                1493.396998   \n",
+       "2        368.294777            16:45:48                 495.929796   \n",
+       "3        740.660213            01:47:40                2518.656016   \n",
+       "4        323.146483            13:03:09                2466.773297   \n",
        "\n",
        "   Estimated Distance (miles) Weather Conditions Traffic Conditions  \\\n",
-       "0                 1041.427961               Snow              Light   \n",
-       "1                 2582.308510              Clear           Moderate   \n",
-       "2                  136.051087              Clear             Severe   \n",
-       "3                 2368.078612         Light Rain              Heavy   \n",
-       "4                  446.419773                Fog              Light   \n",
+       "0                 1347.343378         Light Rain             Severe   \n",
+       "1                 1610.912518              Clear           Moderate   \n",
+       "2                  585.832494              Clear             Severe   \n",
+       "3                 2720.531979         Heavy Rain           Moderate   \n",
+       "4                 1489.795422              Clear             Severe   \n",
        "\n",
        "   Driver Ratings  ... Cost per Gallon (USD)  Total Fuel Cost (USD)  \\\n",
-       "0        1.117360  ...                   3.5             262.480844   \n",
-       "1        4.218477  ...                   3.5            1545.686213   \n",
-       "2        4.570242  ...                   3.0             885.069632   \n",
-       "3        2.921457  ...                   3.5            1457.616899   \n",
-       "4        4.143275  ...                   3.5             403.755691   \n",
+       "0        2.990486  ...                   3.5            1697.019217   \n",
+       "1        1.243085  ...                   3.5             974.485550   \n",
+       "2        1.334854  ...                   3.5             323.608806   \n",
+       "3        4.355089  ...                   3.5            1643.497273   \n",
+       "4        2.618140  ...                   3.0            1379.693375   \n",
        "\n",
        "   Insurance Costs (USD)  Breakdown Repair Costs (USD)  \\\n",
-       "0              72.364442                    255.930919   \n",
-       "1              73.966035                    489.944131   \n",
-       "2              54.339958                    894.769893   \n",
-       "3              84.180146                    382.070630   \n",
-       "4              30.179425                      0.000000   \n",
+       "0              96.922976                    660.421071   \n",
+       "1              33.181200                      0.000000   \n",
+       "2              56.347931                      0.000000   \n",
+       "3              87.362167                      0.000000   \n",
+       "4              26.073320                      0.000000   \n",
        "\n",
        "  Overtime Labor Costs (USD)  Fuel Surcharge (USD) Idle Cost (USD)  \\\n",
-       "0                        0.0             53.993055        1.403801   \n",
-       "1                        0.0             41.406163        2.873531   \n",
-       "2                        0.0             61.810854        0.197848   \n",
-       "3                        0.0             91.852771        2.000698   \n",
-       "4                        0.0             85.497813        0.396772   \n",
+       "0                        0.0             75.199379        0.219246   \n",
+       "1                        0.0             74.013722        1.420456   \n",
+       "2                        0.0             32.167757        2.569551   \n",
+       "3                        0.0             64.691055        1.144174   \n",
+       "4                        0.0             28.224396        0.813373   \n",
        "\n",
        "  Total Operational Cost (USD) Fuel Cost per Mile Delivery Efficiency Score  \n",
-       "0                   978.550735           1.232928                  0.013642  \n",
-       "1                  1093.982877           0.160561                  0.026941  \n",
-       "2                  1727.563238           0.358788                  0.062342  \n",
-       "3                  1533.243676           0.377699                  0.023692  \n",
-       "4                  1042.604804           1.269210                  0.059429  \n",
+       "0                  1729.539837           0.331057                  0.040278  \n",
+       "1                  1000.309343           0.567429                  0.041070  \n",
+       "2                   463.841459           0.742635                  0.013087  \n",
+       "3                   960.391265           0.294070                  0.054048  \n",
+       "4                   442.445597           0.131000                  0.036246  \n",
        "\n",
        "[5 rows x 37 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
