--- a/notebooks/01_data_exploration.ipynb
+++ b/notebooks/01_data_exploration.ipynb
@@ -304,7 +304,7 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "# Load the dataset\n",
-    "logistics_df = pd.read_csv('logistics_df.csv')\n",
+    "logistics_df = pd.read_csv('../data/raw/logistics_df.csv', index=False)\n",
     "\n",
     "# Display basic info and initial rows\n",
     "logistics_df.info()\n",
