--- a/notebooks/04_results_analysis.ipynb
+++ b/notebooks/04_results_analysis.ipynb
@@ -12,28 +12,284 @@
     "\n",
     "- Briefly summarize the goals of this notebook and what you aim to achieve.\n",
     "\n",
-    "## 2. Loading and Preparing Data\n",
-    "\n",
-    "```python\n",
-    "# Import necessary libraries\n",
-    "import pandas as pd\n",
-    "\n",
-    "# Load the test set results\n",
-    "results_df = pd.read_csv('../results/model_output/predictions.csv')\n",
-    "results_df.head()"
+    "## 2. Loading and Preparing Data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Route ID</th>\n",
+       "      <th>Delivery Time (hours)</th>\n",
+       "      <th>Date</th>\n",
+       "      <th>Fuel Costs (USD)</th>\n",
+       "      <th>Delivery Start Time</th>\n",
+       "      <th>Distance Traveled (miles)</th>\n",
+       "      <th>Estimated Distance (miles)</th>\n",
+       "      <th>Weather Conditions</th>\n",
+       "      <th>Traffic Conditions</th>\n",
+       "      <th>Driver Ratings</th>\n",
+       "      <th>...</th>\n",
+       "      <th>Breakdown Repair Costs (USD)</th>\n",
+       "      <th>Overtime Labor Costs (USD)</th>\n",
+       "      <th>Fuel Surcharge (USD)</th>\n",
+       "      <th>Idle Cost (USD)</th>\n",
+       "      <th>Total Operational Cost (USD)</th>\n",
+       "      <th>Fuel Cost per Mile</th>\n",
+       "      <th>Delivery Efficiency Score</th>\n",
+       "      <th>Cost per Mile</th>\n",
+       "      <th>Delivery Efficiency</th>\n",
+       "      <th>Route Length Category</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>89273afc-bd2f-41ed-a73d-ef0b92913719</td>\n",
+       "      <td>6.834667</td>\n",
+       "      <td>2023-06-19</td>\n",
+       "      <td>860.972014</td>\n",
+       "      <td>10:21:08</td>\n",
+       "      <td>2600.678278</td>\n",
+       "      <td>1347.343378</td>\n",
+       "      <td>Light Rain</td>\n",
+       "      <td>Severe</td>\n",
+       "      <td>2.990486</td>\n",
+       "      <td>...</td>\n",
+       "      <td>660.421071</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>75.199379</td>\n",
+       "      <td>0.219246</td>\n",
+       "      <td>1729.539837</td>\n",
+       "      <td>0.331057</td>\n",
+       "      <td>0.040278</td>\n",
+       "      <td>0.331057</td>\n",
+       "      <td>380.512777</td>\n",
+       "      <td>Long</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>78800389-d0f5-41e7-9ab3-4401f6c25c32</td>\n",
+       "      <td>5.090882</td>\n",
+       "      <td>2023-02-24</td>\n",
+       "      <td>847.397208</td>\n",
+       "      <td>06:44:56</td>\n",
+       "      <td>1493.396998</td>\n",
+       "      <td>1610.912518</td>\n",
+       "      <td>Clear</td>\n",
+       "      <td>Moderate</td>\n",
+       "      <td>1.243085</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>74.013722</td>\n",
+       "      <td>1.420456</td>\n",
+       "      <td>1000.309343</td>\n",
+       "      <td>0.567429</td>\n",
+       "      <td>0.041070</td>\n",
+       "      <td>0.567429</td>\n",
+       "      <td>293.347423</td>\n",
+       "      <td>Long</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>cc5a94e9-d53b-4d84-ba13-19d045c00e21</td>\n",
+       "      <td>5.179179</td>\n",
+       "      <td>2023-02-12</td>\n",
+       "      <td>368.294777</td>\n",
+       "      <td>16:45:48</td>\n",
+       "      <td>495.929796</td>\n",
+       "      <td>585.832494</td>\n",
+       "      <td>Clear</td>\n",
+       "      <td>Severe</td>\n",
+       "      <td>1.334854</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>32.167757</td>\n",
+       "      <td>2.569551</td>\n",
+       "      <td>463.841459</td>\n",
+       "      <td>0.742635</td>\n",
+       "      <td>0.013087</td>\n",
+       "      <td>0.742635</td>\n",
+       "      <td>95.754527</td>\n",
+       "      <td>Long</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>36b33d73-1c8e-4782-9775-84def74b3cd0</td>\n",
+       "      <td>3.271822</td>\n",
+       "      <td>2023-09-23</td>\n",
+       "      <td>740.660213</td>\n",
+       "      <td>01:47:40</td>\n",
+       "      <td>2518.656016</td>\n",
+       "      <td>2720.531979</td>\n",
+       "      <td>Heavy Rain</td>\n",
+       "      <td>Moderate</td>\n",
+       "      <td>4.355089</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>64.691055</td>\n",
+       "      <td>1.144174</td>\n",
+       "      <td>960.391265</td>\n",
+       "      <td>0.294070</td>\n",
+       "      <td>0.054048</td>\n",
+       "      <td>0.294070</td>\n",
+       "      <td>769.802170</td>\n",
+       "      <td>Long</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1139533f-4a9f-4348-b05c-10a55d768e04</td>\n",
+       "      <td>7.007333</td>\n",
+       "      <td>2023-06-20</td>\n",
+       "      <td>323.146483</td>\n",
+       "      <td>13:03:09</td>\n",
+       "      <td>2466.773297</td>\n",
+       "      <td>1489.795422</td>\n",
+       "      <td>Clear</td>\n",
+       "      <td>Severe</td>\n",
+       "      <td>2.618140</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>28.224396</td>\n",
+       "      <td>0.813373</td>\n",
+       "      <td>442.445597</td>\n",
+       "      <td>0.131000</td>\n",
+       "      <td>0.036246</td>\n",
+       "      <td>0.131000</td>\n",
+       "      <td>352.027398</td>\n",
+       "      <td>Long</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 40 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                               Route ID  Delivery Time (hours)        Date  \\\n",
+       "0  89273afc-bd2f-41ed-a73d-ef0b92913719               6.834667  2023-06-19   \n",
+       "1  78800389-d0f5-41e7-9ab3-4401f6c25c32               5.090882  2023-02-24   \n",
+       "2  cc5a94e9-d53b-4d84-ba13-19d045c00e21               5.179179  2023-02-12   \n",
+       "3  36b33d73-1c8e-4782-9775-84def74b3cd0               3.271822  2023-09-23   \n",
+       "4  1139533f-4a9f-4348-b05c-10a55d768e04               7.007333  2023-06-20   \n",
+       "\n",
+       "   Fuel Costs (USD) Delivery Start Time  Distance Traveled (miles)  \\\n",
+       "0        860.972014            10:21:08                2600.678278   \n",
+       "1        847.397208            06:44:56                1493.396998   \n",
+       "2        368.294777            16:45:48                 495.929796   \n",
+       "3        740.660213            01:47:40                2518.656016   \n",
+       "4        323.146483            13:03:09                2466.773297   \n",
+       "\n",
+       "   Estimated Distance (miles) Weather Conditions Traffic Conditions  \\\n",
+       "0                 1347.343378         Light Rain             Severe   \n",
+       "1                 1610.912518              Clear           Moderate   \n",
+       "2                  585.832494              Clear             Severe   \n",
+       "3                 2720.531979         Heavy Rain           Moderate   \n",
+       "4                 1489.795422              Clear             Severe   \n",
+       "\n",
+       "   Driver Ratings  ... Breakdown Repair Costs (USD)  \\\n",
+       "0        2.990486  ...                   660.421071   \n",
+       "1        1.243085  ...                     0.000000   \n",
+       "2        1.334854  ...                     0.000000   \n",
+       "3        4.355089  ...                     0.000000   \n",
+       "4        2.618140  ...                     0.000000   \n",
+       "\n",
+       "   Overtime Labor Costs (USD)  Fuel Surcharge (USD)  Idle Cost (USD)  \\\n",
+       "0                         0.0             75.199379         0.219246   \n",
+       "1                         0.0             74.013722         1.420456   \n",
+       "2                         0.0             32.167757         2.569551   \n",
+       "3                         0.0             64.691055         1.144174   \n",
+       "4                         0.0             28.224396         0.813373   \n",
+       "\n",
+       "  Total Operational Cost (USD)  Fuel Cost per Mile Delivery Efficiency Score  \\\n",
+       "0                  1729.539837            0.331057                  0.040278   \n",
+       "1                  1000.309343            0.567429                  0.041070   \n",
+       "2                   463.841459            0.742635                  0.013087   \n",
+       "3                   960.391265            0.294070                  0.054048   \n",
+       "4                   442.445597            0.131000                  0.036246   \n",
+       "\n",
+       "  Cost per Mile Delivery Efficiency Route Length Category  \n",
+       "0      0.331057          380.512777                  Long  \n",
+       "1      0.567429          293.347423                  Long  \n",
+       "2      0.742635           95.754527                  Long  \n",
+       "3      0.294070          769.802170                  Long  \n",
+       "4      0.131000          352.027398                  Long  \n",
+       "\n",
+       "[5 rows x 40 columns]"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Import necessary libraries\n",
+    "import pandas as pd\n",
+    "import seaborn as sns\n",
+    "# Load the test set results\n",
+    "logistics_results_df = pd.read_csv('../data/processed/engineered_data.csv')\n",
+    "logistics_results_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "KeyError",
+     "evalue": "'Actual'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "File \u001b[0;32m/opt/anaconda3/envs/condavenv310/lib/python3.10/site-packages/pandas/core/indexes/base.py:3805\u001b[0m, in \u001b[0;36mIndex.get_loc\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m   3804\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[0;32m-> 3805\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_engine\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget_loc\u001b[49m\u001b[43m(\u001b[49m\u001b[43mcasted_key\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m   3806\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m err:\n",
+      "File \u001b[0;32mindex.pyx:167\u001b[0m, in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[0;34m()\u001b[0m\n",
+      "File \u001b[0;32mindex.pyx:196\u001b[0m, in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[0;34m()\u001b[0m\n",
+      "File \u001b[0;32mpandas/_libs/hashtable_class_helper.pxi:7081\u001b[0m, in \u001b[0;36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[0;34m()\u001b[0m\n",
+      "File \u001b[0;32mpandas/_libs/hashtable_class_helper.pxi:7089\u001b[0m, in \u001b[0;36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;31mKeyError\u001b[0m: 'Actual'",
+      "\nThe above exception was the direct cause of the following exception:\n",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[2], line 4\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01msklearn\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mmetrics\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m mean_absolute_error, r2_score\n\u001b[1;32m      3\u001b[0m \u001b[38;5;66;03m# Calculate and print evaluation metrics\u001b[39;00m\n\u001b[0;32m----> 4\u001b[0m mae \u001b[38;5;241m=\u001b[39m mean_absolute_error(\u001b[43mlogistics_results_df\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mActual\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m]\u001b[49m, logistics_results_df[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mPredicted\u001b[39m\u001b[38;5;124m'\u001b[39m])\n\u001b[1;32m      5\u001b[0m r2 \u001b[38;5;241m=\u001b[39m r2_score(logistics_results_df[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mActual\u001b[39m\u001b[38;5;124m'\u001b[39m], logistics_results_df[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mPredicted\u001b[39m\u001b[38;5;124m'\u001b[39m])\n\u001b[1;32m      6\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mMean Absolute Error: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mmae\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n",
+      "File \u001b[0;32m/opt/anaconda3/envs/condavenv310/lib/python3.10/site-packages/pandas/core/frame.py:4102\u001b[0m, in \u001b[0;36mDataFrame.__getitem__\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m   4100\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcolumns\u001b[38;5;241m.\u001b[39mnlevels \u001b[38;5;241m>\u001b[39m \u001b[38;5;241m1\u001b[39m:\n\u001b[1;32m   4101\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_getitem_multilevel(key)\n\u001b[0;32m-> 4102\u001b[0m indexer \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcolumns\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget_loc\u001b[49m\u001b[43m(\u001b[49m\u001b[43mkey\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m   4103\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m is_integer(indexer):\n\u001b[1;32m   4104\u001b[0m     indexer \u001b[38;5;241m=\u001b[39m [indexer]\n",
+      "File \u001b[0;32m/opt/anaconda3/envs/condavenv310/lib/python3.10/site-packages/pandas/core/indexes/base.py:3812\u001b[0m, in \u001b[0;36mIndex.get_loc\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m   3807\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(casted_key, \u001b[38;5;28mslice\u001b[39m) \u001b[38;5;129;01mor\u001b[39;00m (\n\u001b[1;32m   3808\u001b[0m         \u001b[38;5;28misinstance\u001b[39m(casted_key, abc\u001b[38;5;241m.\u001b[39mIterable)\n\u001b[1;32m   3809\u001b[0m         \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;28many\u001b[39m(\u001b[38;5;28misinstance\u001b[39m(x, \u001b[38;5;28mslice\u001b[39m) \u001b[38;5;28;01mfor\u001b[39;00m x \u001b[38;5;129;01min\u001b[39;00m casted_key)\n\u001b[1;32m   3810\u001b[0m     ):\n\u001b[1;32m   3811\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m InvalidIndexError(key)\n\u001b[0;32m-> 3812\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m(key) \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01merr\u001b[39;00m\n\u001b[1;32m   3813\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mTypeError\u001b[39;00m:\n\u001b[1;32m   3814\u001b[0m     \u001b[38;5;66;03m# If we have a listlike key, _check_indexing_error will raise\u001b[39;00m\n\u001b[1;32m   3815\u001b[0m     \u001b[38;5;66;03m#  InvalidIndexError. Otherwise we fall through and re-raise\u001b[39;00m\n\u001b[1;32m   3816\u001b[0m     \u001b[38;5;66;03m#  the TypeError.\u001b[39;00m\n\u001b[1;32m   3817\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_check_indexing_error(key)\n",
+      "\u001b[0;31mKeyError\u001b[0m: 'Actual'"
+     ]
+    }
+   ],
    "source": [
     "from sklearn.metrics import mean_absolute_error, r2_score\n",
     "\n",
     "# Calculate and print evaluation metrics\n",
-    "mae = mean_absolute_error(results_df['Actual'], results_df['Predicted'])\n",
-    "r2 = r2_score(results_df['Actual'], results_df['Predicted'])\n",
+    "mae = mean_absolute_error(logistics_results_df['Actual'], logistics_results_df['Predicted'])\n",
+    "r2 = r2_score(logistics_results_df['Actual'], logistics_results_df['Predicted'])\n",
     "print(f\"Mean Absolute Error: {mae}\")\n",
     "print(f\"R^2 Score: {r2}\")\n"
    ]
@@ -47,7 +303,7 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "# Plot predictions vs actual values\n",
-    "plt.scatter(results_df['Actual'], results_df['Predicted'], alpha=0.5)\n",
+    "plt.scatter(logistics_results_df['Actual'], logistics_results_df['Predicted'], alpha=0.5)\n",
     "plt.xlabel(\"Actual Values\")\n",
     "plt.ylabel(\"Predicted Values\")\n",
     "plt.title(\"Actual vs. Predicted Values\")\n",
@@ -61,7 +317,7 @@
    "outputs": [],
    "source": [
     "# Plot a feature's effect (e.g., Cost per Mile) on predicted costs\n",
-    "sns.boxplot(data=results_df, x='Cost per Mile', y='Predicted')\n",
+    "sns.boxplot(data=logistics_results_df, x='Cost per Mile', y='Predicted')\n",
     "plt.title(\"Predicted Costs by Cost per Mile\")\n",
     "plt.show()\n"
    ]
@@ -81,7 +337,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.10.14"
   }
  },
