scripts stable and data sim done. finishing eda, working on modeling.

--- a/notebooks/04_results_analysis.ipynb
+++ b/notebooks/04_results_analysis.ipynb
@@ -4,6 +4,92 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "VISUALIZATIONS TO CHECK OFF \n",
+    "\n",
+    "Confusion Matrix (Classification Problems)\n",
+    "from sklearn.metrics import confusion_matrix, ConfusionMatrixDisplay\n",
+    "cm = confusion_matrix(y_test, y_pred)\n",
+    "ConfusionMatrixDisplay(confusion_matrix=cm).plot()\n",
+    "\n",
+    "Feature Importance Visualization\n",
+    "import matplotlib.pyplot as plt\n",
+    "importances = model.feature_importances_\n",
+    "indices = np.argsort(importances)\n",
+    "plt.figure(figsize=(10, 6))\n",
+    "plt.barh(range(len(indices)), importances[indices])\n",
+    "plt.yticks(range(len(indices)), [features[i] for i in indices])\n",
+    "plt.title('Feature Importances')\n",
+    "plt.show()\n",
+    "\n",
+    "SHAP (SHapley Additive exPlanations):\n",
+    "import shap\n",
+    "explainer = shap.TreeExplainer(model)\n",
+    "shap_values = explainer.shap_values(X_test)\n",
+    "shap.summary_plot(shap_values, X_test)\n",
+    "\n",
+    "Permutation Importance:\n",
+    "from sklearn.inspection import permutation_importance\n",
+    "result = permutation_importance(model, X_test, y_test, n_repeats=10, random_state=42)\n",
+    "plt.barh(X_test.columns, result.importances_mean)\n",
+    "plt.title(\"Permutation Importances\")\n",
+    "plt.show()\n",
+    "\n",
+    "Model Performance Metrics and Comparison\n",
+    "ROC Curve (Receiver Operating Characteristic Curve):\n",
+    "Purpose: Visualize the trade-off between true positive rate and false positive rate.\n",
+    "from sklearn.metrics import roc_curve, auc\n",
+    "fpr, tpr, _ = roc_curve(y_test, y_pred_proba)\n",
+    "plt.plot(fpr, tpr, label=f'AUC = {auc(fpr, tpr):.2f}')\n",
+    "plt.plot([0, 1], [0, 1], 'k--')\n",
+    "plt.xlabel('False Positive Rate')\n",
+    "plt.ylabel('True Positive Rate')\n",
+    "plt.title('ROC Curve')\n",
+    "plt.legend()\n",
+    "plt.show()\n",
+    "\n",
+    "Precision-Recall Curve:\n",
+    "Purpose: Particularly useful in imbalanced datasets.\n",
+    "from sklearn.metrics import precision_recall_curve\n",
+    "precision, recall, _ = precision_recall_curve(y_test, y_pred_proba)\n",
+    "plt.plot(recall, precision)\n",
+    "plt.xlabel('Recall')\n",
+    "plt.ylabel('Precision')\n",
+    "plt.title('Precision-Recall Curve')\n",
+    "plt.show()\n",
+    "\n",
+    "Comparing Model Metrics Side-by-Side:\n",
+    "Purpose: Compare key metrics (accuracy, F1-score, RMSE) across different models in a table.\n",
+    "Example:\n",
+    "python\n",
+    "import pandas as pd\n",
+    "model_performance = pd.DataFrame({\n",
+    "    'Model': ['Logistic Regression', 'Random Forest', 'XGBoost'],\n",
+    "    'Accuracy': [0.85, 0.90, 0.88],\n",
+    "    'Precision': [0.82, 0.91, 0.87],\n",
+    "    'Recall': [0.78, 0.89, 0.85],\n",
+    "    'F1 Score': [0.80, 0.90, 0.86]\n",
+    "})\n",
+    "print(model_performance)\n",
+    "\n",
+    "Residual Plots and Prediction vs. Actuals (Regression Problems)\n",
+    "Residual Plot: Shows errors by plotting residuals.\n",
+    "        Example:\n",
+    "\n",
+    "        python\n",
+    "\n",
+    "    residuals = y_test - y_pred\n",
+    "    sns.scatterplot(x=y_pred, y=residuals)\n",
+    "    plt.xlabel('Predicted')\n",
+    "    plt.ylabel('Residuals')\n",
+    "    plt.title('Residual Plot')\n",
+    "\n",
+    "Prediction vs. Actual Plot:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Results and Analysis\n",
     "\n",
     "---\n",
